Implemented edit and get profile handler
