# server/dto/auth.go
@@ -8,9 +8,9 @@ import (
 )
 
 const (
-	clientRole   = "client"
-	driverRole   = "driver"
-	operatorRole = "operator"
+	ClientRole   = "client"
+	DriverRole   = "driver"
+	OperatorRole = "operator"
 )
 
 type SignUpReq struct {
@@ -34,6 +34,6 @@ func (c SignUpReq) Validate() error {
 		validation.Field(&c.Email, validation.Required, is.Email),
 		validation.Field(&c.Password, validation.Required, validation.Match(regexp.MustCompile("^[a-zA-Z0-9'-]{8,18}$"))),
 		validation.Field(&c.Email, validation.Required, validation.Length(5, 70)),
-		validation.Field(&c.AccountType, validation.Required, validation.In(driverRole, operatorRole, clientRole)),
+		validation.Field(&c.AccountType, validation.Required, validation.In(DriverRole, OperatorRole, ClientRole)),
 	)
 }
