# server/dto/operators.go
@@ -6,8 +6,14 @@ const (
 )
 
 type AddCarReq struct {
-	Model    string `json:"model"`
-	Number   string `json:"number"`
-	Status   string `json:"status"`
-	ImageUrl string `json:"image_url"`
+	Model    string `json:"model" example:"BMW"`
+	Series   string `json:"series" example:"M5"`
+	Number   string `json:"number" example:"AX1234XA"`
+	Status   string `json:"status" example:"available"`
+	ImageUrl string `json:"image_url" example:"http://photo/car-1223urhfrvndvnofvsd.jpg"`
 } //@name AddCarReq
+
+type AssignCarToDriverReq struct {
+	DriverID  string `json:"driver_id"`
+	CarNumber string `json:"car_id"`
+}
